[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "quiz-generator-ai-mcp"
version = "1.0.7"
readme = "README.md"
description = "Quiz Generator Ai Mcp: generate quiz (Generate a quiz from provided content text.); validate answers (Validate submitted answers against correct answers and retur); generate flashcards (Generate flashcards (front/back pairs) from content for stud); assess difficulty (Assess the difficulty level of content for quiz/study purpos). pip install quiz-generator-ai-mcp."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "quiz", "generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/quiz-generator-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "auth_middleware.py"]

[project.scripts]
quiz_generator_ai_mcp = "server:main"
